<resources>
    <string name="app_name">디지털 디톡스</string>
    
    <!-- 메인 화면 -->
    <string name="main_title">디지털 디톡스</string>
    <string name="blocked_apps_title">차단할 앱</string>
    <string name="blocked_websites_title">차단할 웹사이트</string>
    <string name="focus_mode_title">집중 모드</string>
    <string name="timer_mode">타이머 모드</string>
    <string name="schedule_mode">스케줄 모드</string>
    <string name="start_focus">집중 설정</string>
    <string name="stop_focus">집중 종료</string>
    
    <!-- 차단 화면 -->
    <string name="app_blocked_title">앱이 차단되었습니다</string>
    <string name="website_blocked_title">웹사이트가 차단되었습니다</string>
    <string name="block_message">집중 시간입니다. 잠시 후 다시 시도해주세요.</string>
    <string name="allow_temporarily">10분만 사용하기</string>
    <string name="back_to_home">홈으로 돌아가기</string>
    
    <!-- 설정 및 권한 -->
    <string name="permissions_required">권한 설정이 필요합니다</string>
    <string name="usage_stats_permission">앱 사용 통계 권한</string>
    <string name="accessibility_permission">접근성 서비스 권한</string>
    <string name="overlay_permission">다른 앱 위에 표시 권한</string>
    <string name="grant_permission">권한 허용</string>
    
    <!-- 접근성 서비스 -->
    <string name="accessibility_service_label">디지털 디톡스 웹사이트 차단</string>
    <string name="accessibility_service_description">웹사이트 차단을 위해 브라우저의 URL을 감지합니다.</string>
    
    <!-- 시간 설정 -->
    <string name="set_timer">타이머 설정</string>
    <string name="minutes">분</string>
    <string name="hours">시간</string>
    <string name="remaining_time">남은 시간: %s</string>
    
    <!-- 메시지 -->
    <string name="service_running">디지털 디톡스가 실행 중입니다</string>
    <string name="temporary_allowed">10분간 임시 허용되었습니다</string>
    <string name="focus_started">집중 모드가 시작되었습니다</string>
    <string name="focus_ended">집중 모드가 종료되었습니다</string>
    
    <!-- 앱 선택 -->
    <string name="select_apps">차단할 앱 선택</string>
    <string name="search_apps">앱 검색...</string>
    <string name="add_website">웹사이트 추가</string>
    <string name="website_url">웹사이트 URL</string>
    <string name="add">추가</string>
    <string name="remove">제거</string>
    
    <!-- 스케줄 관리 -->
    <string name="schedule_management">스케줄 관리</string>
    <string name="add_schedule">스케줄 추가</string>
    <string name="edit_schedule">스케줄 편집</string>
    <string name="schedule_name">스케줄 이름</string>
    <string name="start_time">시작 시간</string>
    <string name="end_time">종료 시간</string>
    <string name="days_of_week">요일 선택</string>
    <string name="save">저장</string>
    <string name="cancel">취소</string>
    <string name="edit">편집</string>
    <string name="delete">삭제</string>
    <string name="sunday">일</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    
    <!-- 기존 프래그먼트용 문자열들 -->
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
</resources>